run spice upgrade e2e
